--- a/assets/css/phone.css
+++ b/assets/css/phone.css
@@ -206,6 +206,21 @@ min-height: calc(100% - 1.6em);
   content:url("../images/disc.png");
 }
 
+.img_field{
+  content:url("../images/field.png");
+}
+
+.img_force{
+  content:url("../images/force.png");
+}
+
+.img_potential{
+  content:url("../images/potential.png");
+}
+
+.img_work{
+  content:url("../images/work.png");
+}
 
 .list_description_popup {
   padding: 0.1em 0em 0.4em 1em;
